ctapmex 29.11.2021 15:30:00 +0000 - build 103

1. Добавлена опция "Сканировать сеть", позволяющая отключить сканирование сети для поиска устройств.
2. Актуализирована справка по диалогу настроек плагина

ctapmex 28.11.2021 13:30:00 +0000 - build 102

1. откат 100.2

ctapmex 28.11.2021 13:00:00 +0000 - build 101

1. Восстановлена работа с Favorites. Папки внутри Favorites больше не поддерживаются.

ctapmex 27.11.2021 13:39:06 +0000 - build 100

1. рефакторинг
2. удалено использование RestoreScreen

w17 23.03.2017 21:34:03 +0300 - build 99

1. forum: Автоматическая замена шары на букву диска
   При переходе из списка шар сервера к выделенному элементу по Enter теперь не происходит
   переход к диску если он назначен, по Ctrl-PgDn - старое поведение (если есть диск - переход к нему).

zg 28.06.2016 00:01:31 +0200 - build 98

1. поддержка фаровской истории.

drkns 22.06.2016 21:50:58 +0200 - build 97

1. Некорректно отображались надписи на линейке клавиш.

2. Уточнения английской локализации.

drkns 28.12.2015 15:16:43 +0200 - build 96

1. Теперь настройки ещё и работают.

drkns 01.05.2014 12:39:45 +0200 - build 95

1. Mantis#0002654: TechInfo #35: Network/HiddenSharesAsHidden
   Редизайн настроек.

svs 23.04.2014 14:23:34 +0400 - build

1. Mantis#0002654: TechInfo #35: Network/HiddenSharesAsHidden
   Уточнение хелпа

svs 22.04.2014 18:16:58 +0400 - build 94

1. Mantis#0002654: TechInfo #35: Network/HiddenSharesAsHidden
   группировка опций в настройках плагина

svs 21.04.2014 11:51:29 +0400 - build 93

1. Уточнение build 92

svs 21.04.2014 11:23:21 +0400 - build 92

1. Mantis#0002654: TechInfo #35: Network/HiddenSharesAsHidden

drkns 18.11.2012 22:16:26 +0200 - build 91

1. Mantis#0002199: сортировка по описаниям компьютеров

t-rex 06.10.2012 20:03:33 +0200 - build 90

1. x64 warnings.

zg 23.09.2012 17:51:14 +0200 - build 89

1. Far 3.0 API 2830

zg 22.09.2012 01:40:45 +0200 - build 88

1. Far 3.0 API 2821

zg 20.09.2012 21:51:46 +0200 - build 87

1. Far 3.0 API 2813