@@ -1,3 +1,8 @@
+ctapmex 01.12.2021 17:30:00 +0000 - build 104
+
+1. Mantis#0003910: При переходе по шарам плагин кэширует первый сервер и дальше подставляет его
+2. Актуализирована справка по диалогу настроек плагина
+
 ctapmex 29.11.2021 15:30:00 +0000 - build 103
 
 1. Добавлена опция "Сканировать сеть", позволяющая отключить сканирование сети для поиска устройств.
